<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/pref_cat_expiry_title"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="@string/pref_key_exp_days"
            app:title="@string/pref_exp_days_title"
            app:summary="@string/pref_exp_days_summary"
            app:defaultValue="3"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="@string/pref_key_exp_time"
            app:title="@string/pref_key_exp_time_title"
            app:summary="@string/pref_key_exp_summary"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="pref_key_default_shelf_life"
            app:title="@string/pref_default_shelf_life_title"
            app:summary="@string/pref_default_shelf_life_summary"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/pref_cat_locations_title"
        app:iconSpaceReserved="false">
        <Preference
            app:key="@string/pref_key_location"
            app:title="@string/pref_location_title"
            app:summary="@string/pref_location_summary"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/pref_cat_title_language"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="language_preference"
            app:title="@string/pref_cat_title_language"
            app:summary="%s"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="en"
            app:iconSpaceReserved="false"
            android:persistent="true"/>

    </PreferenceCategory>
    <PreferenceCategory app:key="pref_key_data"
        app:title="@string/pref_cat_data_title"
        app:iconSpaceReserved="false">

        <Preference
            app:key="pref_clean_images"
            app:title="@string/pref_clean_images_title"
            app:summary="@string/pref_clean_images_summary"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="pref_key_enable_off_api"
            app:title="@string/pref_off_title"
            app:summary="@string/pref_off_summary"
            app:defaultValue="@bool/pref_enable_api"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_off_cache_title"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="pref_off_cache_limit"
            app:title="@string/pref_off_cache_limit_title"
            app:summary="@string/pref_off_cache_limit_summary"
            app:defaultValue="100"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="pref_off_cache_ttl_days"
            app:title="@string/pref_off_cache_ttl_title"
            app:summary="@string/pref_off_cache_ttl_summary"
            app:defaultValue="30"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="pref_off_cache_clear"
            app:title="@string/pref_off_cache_clear_title"
            app:summary="@string/pref_off_cache_clear_summary"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="pref_cat_sync"
        app:title="@string/pref_cat_sync_title"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            app:key="sync_local_network_enabled"
            app:title="@string/pref_sync_local_network_title"
            app:summary="@string/pref_sync_local_network_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="sync_last_timestamp"
            app:title="@string/pref_sync_last_timestamp_title"
            app:selectable="false"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="sync_trigger_manual"
            app:title="@string/pref_sync_trigger_manual_title"
            app:summary="@string/pref_sync_trigger_manual_summary"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="sync_local_peers_status"
            app:title="@string/pref_sync_local_peers_status_title"
            app:selectable="false"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="sync_local_scan_peers"
            app:title="@string/pref_sync_local_scan_peers_title"
            app:summary="@string/pref_sync_local_scan_peers_summary"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="sync_manage_devices"
            app:title="@string/pref_sync_manage_devices_title"
            app:summary="@string/pref_sync_manage_devices_summary"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="pref_cat_debug"
        app:title="@string/pref_cat_debug_title"
        app:iconSpaceReserved="false">

        <Preference
            app:key="pref_debug_export_log"
            app:title="@string/pref_debug_export_log_title"
            app:summary="@string/pref_debug_export_log_summary"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="pref_debug_clear_log"
            app:title="@string/pref_debug_clear_log_title"
            app:summary="@string/pref_debug_clear_log_summary"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>
